# MCP-Control-Lite

./: .gitignore  MCP_Manager_Project_Plan.md  README.md  index.html  package-lock.json  package.json  test_gui.sh  test_tray_menu.sh  verify_gui_update.sh  vite.config.ts
.taskmaster/: state.json
.taskmaster/docs/: clickup-sync-workflow.md  prd.txt  sync-reference.md  tech-stack-alignment.md
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  tasks.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  lib.rs  main.rs
src-tauri/src/adapters/: amazon_q.rs  claude_desktop.rs  cursor.rs  generic.rs  mod.rs
src-tauri/src/configuration/: engine.rs  mod.rs  store.rs  sync.rs
src-tauri/src/detection/: detector.rs  mod.rs  profiles.rs  registry.rs  reporter.rs  validator.rs
src-tauri/src/filesystem/: backup.rs  config.rs  mod.rs  paths.rs  watcher.rs
src-tauri/src/models/: app.rs  audit.rs  compliance.rs  encryption.rs  mod.rs  preferences.rs  registry.rs  security.rs  server.rs  session.rs  validation.rs
src-tauri/src/server/: manager.rs  mod.rs  process.rs  registry.rs
src/components/: Discover.tsx  Logs.tsx  ServerDetail.tsx  Settings.tsx
src/types/: index.ts
