[package]
name = "mcpctl"
version = "1.3.0"
description = "MCP Control - Manage Model Context Protocol servers and configurations"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mcpctl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
regex = "1.0"
urlencoding = "2.1"
which = "4.4"

# Date/time handling for compliance timestamps
chrono = { version = "0.4", features = ["serde"] }

# UUID generation for unique IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Encryption support for sensitive data
ring = "0.17"
aes-gcm = "0.10"
base64 = "0.22"

# Validation and error handling
thiserror = "1.0"
anyhow = "1.0"
url = "2.0"

# Async support for future operations
tokio = { version = "1.0", features = ["full"] }

# File system operations
dirs = "5.0"

# HTTP client for live search
reqwest = { version = "0.11", features = ["json"] }

# Configuration file handling
toml = "0.8"
serde_yaml = "0.9"

# Audit logging
tracing = "0.1"
tracing-subscriber = "0.3.20"

# Access control and security
sha2 = "0.10"
hmac = "0.12"

# CLI parsing
clap = { version = "4.0", features = ["derive"] }

# Async traits
async-trait = "0.1"

# Testing dependencies
[dev-dependencies]
tempfile = "3.0"
reqwest = { version = "0.11", features = ["json"] }
